force-app/main/default/objects/ContainerEvent__e/ContainerEvent__e.object-meta.xml
<CustomObject>
    <label>Nota / Lista</label>
    <pluralLabel>Notas / Listas</pluralLabel>
</CustomObject>