force-app/main/default/objects/ContainerEvent__e/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Evento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>