force-app/main/default/objects/ContainerEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Id del registro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>